Small UI changes
Unifying the UI.

--- a/Filmweb/MainWindow.xaml
+++ b/Filmweb/MainWindow.xaml
@@ -30,6 +30,6 @@
                        VerticalAlignment="Center" HorizontalAlignment="Center"/>
         </Border>
 
-        <ContentControl Content="{Binding CurrentView}" Margin="0,40,0,0"/>
+        <ContentControl Content="{Binding CurrentView}"/>
     </Grid>
 </Window>
