--- a/Filmweb/View/RegisterView.xaml
+++ b/Filmweb/View/RegisterView.xaml
@@ -8,24 +8,29 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid VerticalAlignment="Center" Background="Black">
         <StackPanel HorizontalAlignment="Center">
-            <TextBlock Text="Rejestracja" FontSize="28" FontWeight="Bold" Foreground="White" Margin="0,20"/>
+            <TextBlock Text="Rejestracja"
+               Foreground="White"
+               FontSize="36"
+               FontWeight="Bold"
+               HorizontalAlignment="Center"
+               Margin="0,0,0,20"/>
 
             <TextBlock Text="Imię" Foreground="White"/>
             <TextBox Width="250"/>
 
-            <TextBlock Text="Nazwisko" Foreground="White"/>
+            <TextBlock Text="Nazwisko" Foreground="White" Margin="0,10,0,0"/>
             <TextBox Width="250"/>
 
-            <TextBlock Text="Login" Foreground="White"/>
+            <TextBlock Text="Login" Foreground="White" Margin="0,10,0,0"/>
             <TextBox Width="250"/>
 
-            <TextBlock Text="Hasło" Foreground="White"/>
+            <TextBlock Text="Hasło" Foreground="White" Margin="0,10,0,0"/>
             <PasswordBox Width="250"/>
 
             <Button Content="Zarejestruj się" Width="120" Margin="0,10"/>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBlock Text="Masz konto?" Foreground="White"/>
+                <TextBlock Text="Masz konto?" Foreground="White" VerticalAlignment="Center" Margin="0,0,5,0"/>
                 <Button Content="Logowanie"
                         Background="Red"
                         Foreground="White"
