Dodany jako taki model
Nie wiem jeszcze do konca jak baza bedzie wygladala ale to taki wstepniaczek plus dodalem okienko w rejestracji na maila jeszcze

--- a/Filmweb/View/RegisterView.xaml
+++ b/Filmweb/View/RegisterView.xaml
@@ -21,6 +21,9 @@
             <TextBlock Text="Nazwisko" Foreground="White" Margin="0,10,0,0"/>
             <TextBox Width="250"/>
 
+            <TextBlock Text="E-mail" Foreground="White" Margin="0,10,0,0"/>
+            <TextBox Width="250"/>
+
             <TextBlock Text="Login" Foreground="White" Margin="0,10,0,0"/>
             <TextBox Width="250"/>
 
