--- a/Filmweb/View/LoginView.xaml
+++ b/Filmweb/View/LoginView.xaml
@@ -9,11 +9,11 @@
     <Grid Background="Black" VerticalAlignment="Center">
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBlock Text="Logowanie"
-               Foreground="White"
-               FontSize="36"
-               FontWeight="Bold"
-               HorizontalAlignment="Center"
-               Margin="0,0,0,20"/>
+                   Foreground="White"
+                   FontSize="36"
+                   FontWeight="Bold"
+                   HorizontalAlignment="Center"
+                   Margin="0,0,0,20"/>
 
             <TextBlock Text="Login" Foreground="White"/>
             <TextBox Width="250"/>
@@ -22,17 +22,18 @@
             <PasswordBox Width="250"/>
 
             <Button Content="Zaloguj się"
-            Width="120"
-            Margin="0,10"
-            HorizontalAlignment="Center"/>
+                    Width="120"
+                    Margin="0,10"
+                    HorizontalAlignment="Center"
+                    Command="{Binding LogInCommand}"/>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
                 <TextBlock Text="Nie masz konta?" Foreground="White" VerticalAlignment="Center" Margin="0,0,10,0"/>
                 <Button Content="Rejestracja"
-                Background="Red"
-                Foreground="White"
-                Padding="5,2"
-                Command="{Binding SwitchToRegisterCommand}"/>
+                        Background="Red"
+                        Foreground="White"
+                        Padding="5,2"
+                        Command="{Binding SwitchToRegisterCommand}"/>
             </StackPanel>
         </StackPanel>
     </Grid>
