--- a/Filmweb/View/TopBarFull.xaml
+++ b/Filmweb/View/TopBarFull.xaml
@@ -31,7 +31,20 @@
                    HorizontalAlignment="Center"/>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
-            <Button Command="{Binding NavigateToProfileCommand}"
+            <Button Command="{Binding DataContext.NavigateToHomeCommand, RelativeSource={RelativeSource AncestorType=Window}}"
+                Margin="0,0,7,0"
+                Foreground="White"
+                Background="Transparent"
+                BorderBrush="White"
+                Padding="5,5">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock FontFamily="Segoe MDL2 Assets"
+                           Text="&#xE80F;"
+                           FontSize="20"
+                           Margin="0,0,0,0"/>   
+                </StackPanel>
+            </Button>
+            <Button Command="{Binding DataContext.NavigateToProfileCommand, RelativeSource={RelativeSource AncestorType=Window}}"
                     Margin="0,0,5,0"
                     Foreground="White"
                     Background="Transparent"
