duzo kodu, malo rezultatow , patrz opis
dodany panel edycji, drobne zmiany w wygladzie, validacja na razie sypala bledy wiec nie ma, zakomentowane laczenie z baza wiec mozna odpalac smialo, jakies losowe komentarze po kodzie

--- a/Filmweb/View/LoginView.xaml
+++ b/Filmweb/View/LoginView.xaml
@@ -15,7 +15,7 @@
                    HorizontalAlignment="Center"
                    Margin="0,0,0,20"/>
 
-            <TextBlock Text="Login" Foreground="White"/>
+            <TextBlock Text="Login/E-mail" Foreground="White"/>
             <TextBox Width="250"/>
 
             <TextBlock Text="Hasło" Foreground="White" Margin="0,10,0,0"/>
