--- a/Filmweb/View/RegisterView.xaml
+++ b/Filmweb/View/RegisterView.xaml
@@ -30,7 +30,7 @@
             <TextBlock Text="Hasło" Foreground="White" Margin="0,10,0,0"/>
             <PasswordBox Width="250"/>
 
-            <Button Content="Zarejestruj się" Width="120" Margin="0,10"/>
+            <Button Content="Zarejestruj się" Width="120" Margin="0,10" Command="{Binding RegisterInCommand}"/>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <TextBlock Text="Masz konto?" Foreground="White" VerticalAlignment="Center" Margin="0,0,10,0"/>
