--- a/Filmweb/View/RegisterView.xaml
+++ b/Filmweb/View/RegisterView.xaml
@@ -16,19 +16,19 @@
                Margin="0,0,0,20"/>
 
             <TextBlock Text="Imię" Foreground="White"/>
-            <TextBox Width="250"/>
+            <TextBox Width="250" Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}"/>
 
             <TextBlock Text="Nazwisko" Foreground="White" Margin="0,10,0,0"/>
-            <TextBox Width="250"/>
+            <TextBox Width="250" Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}"/>
 
             <TextBlock Text="E-mail" Foreground="White" Margin="0,10,0,0"/>
-            <TextBox Width="250"/>
+            <TextBox Width="250" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"/>
 
             <TextBlock Text="Login" Foreground="White" Margin="0,10,0,0"/>
-            <TextBox Width="250"/>
+            <TextBox Width="250" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"/>
 
             <TextBlock Text="Hasło" Foreground="White" Margin="0,10,0,0"/>
-            <PasswordBox Width="250"/>
+            <PasswordBox Width="250" PasswordChanged="PasswordBox_PasswordChanged"/>
 
             <Button Content="Zarejestruj się" Width="120" Margin="0,10" Command="{Binding RegisterInCommand}"/>
 
