--- a/Filmweb/View/LoginView.xaml
+++ b/Filmweb/View/LoginView.xaml
@@ -15,11 +15,11 @@
                    HorizontalAlignment="Center"
                    Margin="0,0,0,20"/>
 
-            <TextBlock Text="Login/E-mail" Foreground="White"/>
-            <TextBox Width="250"/>
+            <TextBlock Text="Login" Foreground="White"/>
+            <TextBox Width="250" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"/>
 
             <TextBlock Text="Hasło" Foreground="White" Margin="0,10,0,0"/>
-            <PasswordBox Width="250"/>
+            <PasswordBox Width="250" PasswordChanged="PasswordBox_PasswordChanged"/>
 
             <Button Content="Zaloguj się"
                     Width="120"
