--- a/Filmweb/App.xaml
+++ b/Filmweb/App.xaml
@@ -5,5 +5,6 @@
              xmlns:view="clr-namespace:Filmweb.View"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <local:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
     </Application.Resources>
 </Application>
