--- a/Filmweb/View/ProfileView.xaml
+++ b/Filmweb/View/ProfileView.xaml
@@ -56,13 +56,8 @@
                 <Rectangle HorizontalAlignment="Left" Height="2" Width="350" Fill="Orange" Margin="0,0,0,10"/>
 
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                    <TextBlock Text="Favourite Film:" Foreground="White" FontWeight="Bold" FontSize="18"/>
+                    <TextBlock Text="Ulubiony film:" Foreground="White" FontWeight="Bold" FontSize="18"/>
                     <TextBlock Text="User_Fav_Film" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                    <TextBlock Text="Favourite Actor:" Foreground="White" FontWeight="Bold" FontSize="18"/>
-                    <TextBlock Text="User_Fav_Actor" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
                 </StackPanel>
             </StackPanel>
 
@@ -87,7 +82,7 @@
         </Grid>
 
         <StackPanel Grid.Row="1" Margin="0,5,0,0">
-            <TextBlock Text="Opinions"
+            <TextBlock Text="Opinie"
                        Foreground="White"
                        FontSize="36"
                        FontWeight="Bold"
