--- a/Filmweb/View/HomeView.xaml
+++ b/Filmweb/View/HomeView.xaml
@@ -16,24 +16,17 @@
 
                 <StackPanel Orientation="Horizontal" Grid.Column="0">
                     <TextBox x:Name="SearchBox"
-                             Width="500"
+                             Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
+                             Width="300"
                              Height="30"
                              FontSize="16"
                              FontWeight="Bold"
                              VerticalContentAlignment="Center"
                              Padding="5,0"
-                             Text="Wyszukaj..."
-                             Foreground="Gray"
+                             Foreground="{Binding SearchBoxForeground}"
                              GotFocus="SearchBox_GotFocus"
                              LostFocus="SearchBox_LostFocus" />
 
-                    <Button Width="30"
-                            Height="30"
-                            Background="White"
-                            FontFamily="Segoe MDL2 Assets"
-                            Content="&#xE71E;"
-                            FontSize="20"
-                            Margin="2,0,0,0"/>
                 </StackPanel>
 
                 <ComboBox
