--- a/Filmweb/View/ProfileView.xaml
+++ b/Filmweb/View/ProfileView.xaml
@@ -25,7 +25,7 @@
                                Foreground="White"
                                FontSize="50"
                                Margin="0,0,10,0"/>
-                    <TextBlock Text="User_Login"
+                    <TextBlock Text="{Binding CurrentUser.Username}"
                                Foreground="White"
                                FontSize="40"
                                FontWeight="Bold"/>
@@ -33,31 +33,31 @@
 
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                     <TextBlock Text="Imię:" Foreground="White" FontWeight="Bold" FontSize="18"/>
-                    <TextBlock Text="User_First_Name" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
+                    <TextBlock Text="{Binding CurrentUser.FirstName}" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                     <TextBlock Text="Nazwisko:" Foreground="White" FontWeight="Bold" FontSize="18"/>
-                    <TextBlock Text="User_Last_Name" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
+                    <TextBlock Text="{Binding CurrentUser.LastName}" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
                     <TextBlock Text="Mail:" Foreground="White" FontWeight="Bold" FontSize="18"/>
-                    <TextBlock Text="User_Mail" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
+                    <TextBlock Text="{Binding CurrentUser.Email}" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
                 </StackPanel>
 
                 <Rectangle HorizontalAlignment="Left" Height="2" Width="350" Fill="Orange" Margin="0,0,0,10"/>
 
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
                     <TextBlock Text="Data dołączenia:" Foreground="White" FontWeight="Bold" FontSize="18"/>
-                    <TextBlock Text="User_date" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
+                    <TextBlock Text="{Binding CurrentUser.JoinDate}" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
                 </StackPanel>
 
                 <Rectangle HorizontalAlignment="Left" Height="2" Width="350" Fill="Orange" Margin="0,0,0,10"/>
 
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                     <TextBlock Text="Ulubiony film:" Foreground="White" FontWeight="Bold" FontSize="18"/>
-                    <TextBlock Text="User_Fav_Film" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
+                    <TextBlock Text="{Binding CurrentUser.FavouriteMovie.Title}" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
                 </StackPanel>
             </StackPanel>
 
