--- a/Filmweb/View/ProfileView.xaml
+++ b/Filmweb/View/ProfileView.xaml
@@ -50,7 +50,7 @@
 
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
                     <TextBlock Text="Data dołączenia:" Foreground="White" FontWeight="Bold" FontSize="18"/>
-                    <TextBlock Text="{Binding CurrentUser.JoinDate}" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
+                    <TextBlock Text="{Binding CurrentUser.JoinDate, StringFormat=d}" Foreground="White" FontSize="18" Margin="5,0,0,0"/>
                 </StackPanel>
 
                 <Rectangle HorizontalAlignment="Left" Height="2" Width="350" Fill="Orange" Margin="0,0,0,10"/>
