da sie kliknac w informacje o filmie juz

--- a/Filmweb/View/MovieItemView.xaml
+++ b/Filmweb/View/MovieItemView.xaml
@@ -79,6 +79,7 @@
             <Button Grid.Row="5" Grid.ColumnSpan="2"
                     Content="Zobacz"
                     Width="100"
+                    Click="Zobacz_Click"
                     HorizontalAlignment="Center"
                     Padding="4"
                     Background="Orange"
