--- a/Filmweb/View/MovieDetailsView.xaml
+++ b/Filmweb/View/MovieDetailsView.xaml
@@ -71,7 +71,7 @@
                                    VerticalAlignment="Top"
                                    HorizontalAlignment="Right"
                                    Margin="10,5,0,0"/>
-                        <TextBlock Text="{Binding Movie.Rating}" Foreground="Red" />
+                       
                     </Grid>
 
                     <TextBlock Text="{Binding GenresAsText}"
@@ -84,6 +84,13 @@
                                Foreground="Black"
                                TextWrapping="Wrap"
                                Margin="0,2,0,0"/>
+                    <TextBlock Text="Reżyserzy:" FontWeight="Bold" Foreground="Black" Margin="0,10,0,0"/>
+                    <TextBlock Text="{Binding Movie.Directors, Converter={StaticResource ListToCommaStringConverter}}" TextWrapping="Wrap" Foreground="Black"/>
+
+                    <TextBlock Text="Aktorzy:" FontWeight="Bold" Foreground="Black" Margin="0,10,0,0"/>
+                    <TextBlock Text="{Binding Movie.Actors, Converter={StaticResource ListToCommaStringConverter}}" TextWrapping="Wrap" Foreground="Black"/>
+
+
                 </StackPanel>
             </Grid>
         </Border>
