--- a/Filmweb/View/ProfileView.xaml
+++ b/Filmweb/View/ProfileView.xaml
@@ -87,14 +87,46 @@
             </Button>
         </Grid>
 
-        <StackPanel Grid.Row="1" Margin="0,5,0,0">
-            <TextBlock Text="Opinie"
-                       Foreground="White"
-                       FontSize="36"
-                       FontWeight="Bold"
-                       Margin="0,0,0,10"/>
-            <Rectangle Height="2" Fill="Orange" Margin="0,0,0,10"/>
-        </StackPanel>
-    </Grid>
+            <StackPanel Grid.Row="1" Margin="0,5,0,0">
+                <TextBlock Text="Opinie"
+               Foreground="White"
+               FontSize="36"
+               FontWeight="Bold"
+               Margin="0,0,0,10"/>
+                <Rectangle Height="2" Fill="Orange" Margin="0,0,0,10"/>
+
+                <ItemsControl ItemsSource="{Binding UserReviews}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="Orange" BorderThickness="1" CornerRadius="4" Padding="10" Margin="0,0,0,10" Background="#222">
+                                <StackPanel>
+                                    <TextBlock Text="{Binding FilmName}" 
+                                   FontSize="16" 
+                                   FontWeight="Bold" 
+                                   Foreground="Orange" 
+                                   Margin="0,0,0,3"/>
+
+                                    <TextBlock Text="{Binding Rating, StringFormat=Ocena: {0}/10}" 
+                                   FontSize="14" 
+                                   Foreground="White"/>
+
+                                    <TextBlock Text="{Binding DateAdded, StringFormat='{}{0:yyyy-MM-dd}'}" 
+                                   FontStyle="Italic" 
+                                   FontSize="12" 
+                                   Foreground="LightGray" 
+                                   Margin="0,2,0,0"/>
+
+                                    <TextBlock Text="{Binding Content}" 
+                                   TextWrapping="Wrap" 
+                                   Foreground="White" 
+                                   FontSize="14" 
+                                   Margin="0,5,0,0"/>
+                                </StackPanel>
+                            </Border>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </StackPanel>
+        </Grid>
 </ScrollViewer>
 </UserControl>
